<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tvDoYouWantToLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_want_to_logout"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvConfirmation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/archivo_medium"
                    android:text="@string/are_you_sure_you_want_to_logout_the_app"
                    android:textColor="@color/hint_color"
                    android:textSize="@dimen/_8ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDoYouWantToLogout" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tvConfirmation"
                    app:layout_constraintStart_toStartOf="@+id/tvConfirmation"
                    app:layout_constraintTop_toBottomOf="@id/tvConfirmation">

                    <TextView
                        android:id="@+id/btLogout"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_13sdp"
                        android:background="@drawable/red_button_bg"
                        android:fontFamily="@font/archivo_semibold"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:text="@string/logout"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_8ssp" />

                    <TextView
                        android:id="@+id/tvDismiss"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_20sdp"
                        android:background="@drawable/red_button_bg"
                        android:backgroundTint="@color/black"
                        android:fontFamily="@font/archivo_semibold"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_8ssp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
