<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:fitsSystemWindows="true"
    tools:context=".view.fragments.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appLogo_IV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:scaleType="fitXY"
                android:src="@mipmap/app_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/otpHeading_Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/archivo_medium"
                android:text="@string/login"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appLogo_IV" />

            <TextView
                android:id="@+id/otpSecondHeading_Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/archivo_medium"
                android:text="@string/please_enter_your_login_details"
                android:textColor="@color/grey"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otpHeading_Tv" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otpSecondHeading_Tv">

                <LinearLayout
                    android:id="@+id/companyCode_LL"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/editbox_bg"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:src="@drawable/companycode" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/companyCode_ET"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/box_color"
                        android:fontFamily="@font/archivo_medium"
                        android:hint="@string/company_code"
                        android:inputType="textEmailAddress"
                        android:paddingStart="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_7ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/email_LL"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/editbox_bg">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:src="@drawable/username" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/email_ET"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/box_color"
                        android:fontFamily="@font/archivo_medium"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:paddingStart="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_7ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/password_LL"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/editbox_bg">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:src="@drawable/password" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password_ET"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/box_color"
                        android:fontFamily="@font/archivo_medium"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_7ssp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/passwordEye_IV"
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:tint="@color/color_grey"
                        app:srcCompat="@drawable/avd_show_password" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/vehicle_LL"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/editbox_bg">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:src="@drawable/vehicle" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/vehicle_ET"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/box_color"
                        android:fontFamily="@font/archivo_medium"
                        android:hint="@string/vehicle"
                        android:paddingStart="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_7ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rememberMe_LL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_8sdp">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/rememberMe_CB"
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_10sdp"
                            android:layout_marginStart="@dimen/_1sdp"
                            android:background="@drawable/checkbox_bg"
                            android:button="@null"
                            android:checked="true"
                            android:gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:paddingStart="@dimen/_4sdp"
                            android:text="@string/remember_me"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/_7ssp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/forgotPassword_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:paddingStart="@dimen/_2sdp"
                        android:paddingEnd="@dimen/_4sdp"
                        android:text="@string/forgot_password"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/_7ssp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/btnContinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/loginbutton_bg"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/archivo_medium"
                        android:padding="@dimen/_8sdp"
                        android:text="Continue"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_8ssp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>